--- a/ArsaRExCH/Components/AdminComponents/GetAllPools.razor
+++ b/ArsaRExCH/Components/AdminComponents/GetAllPools.razor
@@ -1,5 +1,7 @@
 ﻿@using ArsaRExCH.Model
 @inject ArsaRExCH.Interface.IBitcoinPool _bitcooinPoolInterface
+@inject AuthenticationStateProvider _AuthenticationStateProvider
+@inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
 
 <style>
     .container {
@@ -66,13 +68,31 @@ else
 
 @code {
     private List<BitcoinPool> Pools { get; set; }
+    private string user2 { get; set; }
+    private string currentUserRole;
+    private bool isAdmin;
 
     protected override async Task OnInitializedAsync()
     {
-        await recall();
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+        var user = authState.User;
+
+        if (user.Identity?.IsAuthenticated ?? false)
+        {
+            // Check if the user is an admin directly here
+
+            user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+            var roles = await _adminInterface.GetUserRolesAsync(user);
+            // var roles = user.FindAll(ClaimTypes.Role).Select(c => c.Value).ToList();
+            isAdmin = roles.Contains("Admin");
+            currentUserRole = roles.FirstOrDefault();
+            await recall();
+        }
+       
     }
 
-    private async Task RefreshPools() // Add this method
+    private async Task RefreshPools()
     {
         await recall(); // Refresh the pool list
     }
