--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -77,7 +77,7 @@
                 <a  class="main-tab">User Information</a>
                 <div class="sub-tabs">
                     <a href="BetHistory">Bet History</a>
-                    <a href="#tab6">Tab 6</a>
+                    <a href="BitcoinPoolOneUsers">Pools</a>
                     <a href="#tab7">Tab 7</a>
                     <a href="#tab8">Tab 8</a>
                 </div>
