--- a/ArsaRExCH/Components/MyComponents/LiveChatSample.razor
+++ b/ArsaRExCH/Components/MyComponents/LiveChatSample.razor
@@ -1,15 +1,46 @@
-﻿@page "/"
+﻿@page "/chat"
 @using System.Security.Claims
+@using ArsaRExCH.Model
 @using Microsoft.AspNetCore.Authorization
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
+@inject ArsaRExCH.Interface.ILiveChat _liveCHatInterface
+@rendermode InteractiveServer
 @attribute [Authorize]
 
+<EditForm Model="@lifeChat" OnValidSubmit="SaveMessage" FormName="@FormName">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+
+    <div class="form-group">
+        <label for="message">Message</label>
+        <InputText id="message" class="form-control" @bind-Value="lifeChat.Message" />
+    </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
+</EditForm>
+
 @code {
+    private LiveChat lifeChat = new LiveChat(); 
+    private string user2 { get; set; }
+    private string FormName = "Live Chat Form";
 
     protected override async Task OnInitializedAsync()
     {
-        
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        if (user.Identity?.IsAuthenticated ?? false)
+        {
+            user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+        }
 
+    }
+    private async Task SaveMessage()
+
+    {
+        lifeChat.TimeAndDate = DateTime.Now;
+        lifeChat.ApplicationUserId = user2;
+        await  _liveCHatInterface.SaveMessage(lifeChat);
+        Console.WriteLine("datasaves");
     }
 }
