--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -22,7 +22,7 @@
         width:100%;
     }
 </style>
-
+<ArsaRExCH.Components.MyComponents.LiveChatSample></ArsaRExCH.Components.MyComponents.LiveChatSample>
 <center><div class="win-container">
    <ArsaRExCH.Components.MyComponents.Win></ArsaRExCH.Components.MyComponents.Win>
    <hr />
