--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -87,9 +87,9 @@
             <div class="component-wrapper">
                 <ArsaRExCH.Components.Pages.BtcPrice></ArsaRExCH.Components.Pages.BtcPrice>
             </div>
-          
+            <ArsaRExCH.Components.AdminComponents.MessageAdmin></ArsaRExCH.Components.AdminComponents.MessageAdmin>
         </div>
-  
+
         <article class="content px-4">
             @Body
         </article>
