--- a/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
+++ b/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
@@ -1,10 +1,45 @@
 ﻿@using Microsoft.AspNetCore.Components
 
-@BtcPrice
+<!-- TradingView Widget ,here we can also tradingviwq liabraries , next approach  -->
+<div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+          {
+          "width": "980",
+          "height": "500",
+          "symbol": "BITSTAMP:BTCUSD",
+          "interval": "D",
+          "timezone": "Etc/UTC",
+          "theme": "light",
+          "style": "1",
+          "locale": "en",
+          "allow_symbol_change": true,
+          "calendar": false,
+          "support_host": "https://www.tradingview.com"
+        }
+    </script>
+</div>
+<!-- TradingView Widget END -->
+<p>@btcPriceVariable</p>
+
 @code {
     [CascadingParameter(Name = "BtcPrice")]
     public string BtcPrice { get; set; }
 
     [CascadingParameter(Name = "EthPrice")]
     public string EthPrice { get; set; }
+
+    private string btcPriceVariable;
+    private string ethPriceVariable;
+
+    protected override void OnParametersSet()
+    {
+        btcPriceVariable = BtcPrice;
+        ethPriceVariable = EthPrice;
+
+        // Debugging output
+        Console.WriteLine($"BTC Price received: {btcPriceVariable}");
+        Console.WriteLine($"ETH Price received: {ethPriceVariable}");
+    }
 }
