--- a/ArsaRExCH/Components/App.razor
+++ b/ArsaRExCH/Components/App.razor
@@ -13,6 +13,11 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="https://s3.tradingview.com/charting_library/charting_library.js"></script>
+
+    <link rel="stylesheet" href="https://s3.tradingview.com/charting_library/charting_library.css">
+    <script src="https://s3.tradingview.com/tv.js"></script> <!-- Make sure this is correct -->
+
     <HeadOutlet />
 </head>
 
@@ -20,6 +25,7 @@
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="tradingview.js"></script>
 
 </body>
 
