--- a/ArsaRExCH/Components/Pages/BtcPrice.razor
+++ b/ArsaRExCH/Components/Pages/BtcPrice.razor
@@ -6,7 +6,7 @@
 @inject IHttpClientFactory httpClientFactory
 @rendermode InteractiveServer
 
-<div style="display: flex; gap: 20px;">
+<div style="display: flex; gap: 20px">
     <p>BTC Price: <b>@btcPriceString USD</b></p>
     <p>ETH Price: <b>@ethPriceString USD</b></p>
 </div>
